WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68660
EventSenderProxy::mouseUp should call -[WKView mouseUp:] instead of -[WKView mouseDown:]
https://bugs.webkit.org/show_bug.cgi?id=68660
Summary
EventSenderProxy::mouseUp should call -[WKView mouseUp:] instead of -[WKView ...
Anders Carlsson
Reported
2011-09-22 15:09:22 PDT
EventSenderProxy::mouseUp should call -[WKView mouseUp:] instead of -[WKView mouseDown:]
Attachments
Patch
(1.30 KB, patch)
2011-09-22 15:09 PDT
,
Anders Carlsson
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-09-22 15:09:39 PDT
Created
attachment 108408
[details]
Patch
Adam Barth
Comment 2
2011-09-22 15:10:36 PDT
Comment on
attachment 108408
[details]
Patch You're killing me. No test partner?
Anders Carlsson
Comment 3
2011-09-22 15:12:30 PDT
Committed
r95755
: <
http://trac.webkit.org/changeset/95755
>
Alexey Proskuryakov
Comment 4
2011-09-22 22:05:30 PDT
I've been seeing tons of regression tests crash with an assertion in -[WKView mouseDown:] today, presumably because of this mistake.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug