EventSenderProxy::mouseUp should call -[WKView mouseUp:] instead of -[WKView mouseDown:] https://bugs.webkit.org/show_bug.cgi?id=68660

Reviewed by Adam Barth.

* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::mouseUp):


Canonical link: https://commits.webkit.org/84597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95755 268f45cc-cd09-0410-ab3c-d52691b4dbfc